--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <select id="languageDrop">
             <!-- value is actual thing submitted - want it to be the shorthand used for API -->
             <option value="en">English</option>
-            <opiton value="es">Español</opiton>
-            <opiton value="fr">Français</opiton>
-            <opiton value="it">Italiano</opiton>
-            <opiton value="pt">Português</opiton>
-            <opiton value="uk">Українська</opiton>
-
+            <option value="es">Español</option>
+            <option value="fr">Français</option>
+            <option value="it">Italiano</option>
+            <option value="pt">Português</option>
+            <option value="uk">Українська</option>
         </select>
+
+        <div id = "mainStuff">
         <div id="characters">
             <button id ="charButton">Which Character Are You?</button>
             <div id="charName"></div>
@@ -33,9 +34,10 @@
         </div>
 
         <div id="spells">
-            <button id="spellButton">Learn new spells!</button>
+            <button id="spellButton">Learn New Spells!</button>
             <div id="printSpell"></div>
             <div id="printSpellUse"></div>
+        </div>
         </div>
     </body>
 </html>
